--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -389,6 +389,7 @@
     <Compile Include="Reportes\RRHH\ROL_019_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_018_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_020_Info.cs" />
+    <Compile Include="Reportes\RRHH\ROL_021_Info.cs" />
     <Compile Include="RRHH\MTE\ro_archivosCSV_Info.cs" />
     <Compile Include="RRHH\RDEP\Rdep.cs" />
     <Compile Include="RRHH\RDEP\Rdep_Info.cs" />
