--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -357,6 +357,7 @@
     <Compile Include="Reportes\RRHH\ROL_019_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_018_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_020_Bus.cs" />
+    <Compile Include="Reportes\RRHH\ROL_021_Bus.cs" />
     <Compile Include="RRHH\Rdep_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Bus.cs" />
