--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9688,6 +9688,9 @@
     <Content Include="Areas\RRHH\Views\ImportacionHoras\_CmbRubro_impor_horas.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\_CmbEmpleado_imp_horas.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_021.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbArea_reportes.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbDivisin_reportes.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbSucursal_reportes_RRHH.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
