--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -398,6 +398,8 @@
     <Compile Include="Areas\Inventario\Controllers\TransferenciasInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\UnidadDeMedidaController.cs" />
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
+    <Compile Include="Areas\Migraciones\Controllers\FacturasEventosController.cs" />
+    <Compile Include="Areas\Migraciones\MigracionesAreaRegistration.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\AprobacionPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\GrupoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\PeriodoPresupuestoController.cs" />
@@ -9690,6 +9692,9 @@
     <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbArea_reportes.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbDivision_reportes.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbSucursal_reportes_RRHH.cshtml" />
+    <Content Include="Areas\Migraciones\Views\web.config" />
+    <Content Include="Areas\Migraciones\Views\FacturasEventos\_GridViewPartial_documentos_pendientes_enviar_sri.cshtml" />
+    <Content Include="Areas\Migraciones\Views\FacturasEventos\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9767,6 +9772,8 @@
     <Folder Include="Areas\General\Models\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
+    <Folder Include="Areas\Migraciones\Models\" />
+    <Folder Include="Areas\Migraciones\Views\Shared\" />
     <Folder Include="Areas\Presupuesto\Models\" />
     <Folder Include="Areas\Produccion\Models\" />
     <Folder Include="Areas\Produccion\Views\Shared\" />
