--- a/ERP/Core.Erp.Web/Areas/Migraciones/Views/web.config
+++ b/ERP/Core.Erp.Web/Areas/Migraciones/Views/web.config
@@ -18,6 +18,19 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="Core.Erp.Web" />
+        <add namespace="DevExpress.Utils" />
+        <add namespace="DevExpress.Web.ASPxThemes" />
+        <add namespace="DevExpress.Web" />
+        <add namespace="DevExpress.Web.Mvc" />
+        <add namespace="DevExpress.Web.Mvc.UI" />
+        <add namespace="DevExpress.Web.ASPxTreeList" />
+        <add namespace="DevExpress.XtraReports" />
+        <add namespace="DevExpress.XtraReports.UI" />
+        <add namespace="DevExpress.XtraReports.Web" />
+        <add namespace="DevExpress.XtraReports.Web.DocumentViewer" />
+        <add namespace="DevExpress.Web.ASPxPivotGrid" />
+        <add namespace="DevExpress.Data.PivotGrid" />
+        <add namespace="DevExpress.XtraPivotGrid" />
         
       </namespaces>
     </pages>
