--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -137,6 +137,8 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_liquidacion_comisiones_det_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_liquidacion_comisiones_Info.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_Info.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_x_tb_sucursal_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Info.cs" />
