--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -167,6 +167,7 @@
     <Compile Include="CuentasPorPagar\cp_SolicitudPagoDet_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_SolicitudPago_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_TipoDocumento_Info.cs" />
+    <Compile Include="cxc_LiquidacionTarjeta_Info.cs" />
     <Compile Include="Facturacion\fa_CambioProductoDet_Info.cs" />
     <Compile Include="Facturacion\fa_CambioProducto_Info.cs" />
     <Compile Include="Facturacion\fa_catalogo_Info.cs" />
