--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -109,6 +109,7 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Bus.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjeta_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_liquidacion_comisiones_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_liquidacion_comisiones_det_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_Bus.cs" />
