--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -396,10 +396,10 @@
     <Compile Include="Reportes\RRHH\ROL_018_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_020_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_021_Info.cs" />
+    <Compile Include="Reportes\RRHH\ROL_022_Info.cs" />
     <Compile Include="RRHH\MTE\ro_archivosCSV_Info.cs" />
     <Compile Include="RRHH\RDEP\Rdep.cs" />
     <Compile Include="RRHH\RDEP\Rdep_Info.cs" />
-    <Compile Include="RRHH\ROL_022_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Info.cs" />
     <Compile Include="RRHH\ro_ArchivosIess_Info.cs" />
