--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -453,6 +453,7 @@
     <Compile Include="Areas\RRHH\Controllers\ImportacionHorasController.cs" />
     <Compile Include="Areas\RRHH\Controllers\ImportacionMarcacionesController.cs" />
     <Compile Include="Areas\RRHH\Controllers\ImportacionNovedadesController.cs" />
+    <Compile Include="Areas\RRHH\Controllers\JornadaController.cs" />
     <Compile Include="Areas\RRHH\Controllers\LiquidacionVacacionesController.cs" />
     <Compile Include="Areas\RRHH\Controllers\MarcacionEmpleadoController.cs" />
     <Compile Include="Areas\RRHH\Controllers\NominaTipoController.cs" />
@@ -9738,6 +9739,9 @@
     <Content Include="Areas\Caja\Views\CajaMovimientoIngreso\_CmbTipoMovimiento_Ingreso.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoEgreso\_CmbTipoMovimiento_Egreso.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_022.cshtml" />
+    <Content Include="Areas\RRHH\Views\Jornada\_GridViewPartial_Jornada.cshtml" />
+    <Content Include="Areas\RRHH\Views\Jornada\Nuevo.cshtml" />
+    <Content Include="Areas\RRHH\Views\Jornada\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
