--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9745,6 +9745,7 @@
     <Content Include="Areas\RRHH\Views\Empleado\_GridViewPartial_empleado_jornada_det.cshtml" />
     <Content Include="Areas\RRHH\Views\Jornada\Modificar.cshtml" />
     <Content Include="Areas\RRHH\Views\Jornada\Anular.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionTarjetaCredito\Modificar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
