--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2334,6 +2334,9 @@
     <Compile Include="vwro_empleado_x_division_x_area.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwro_empleado_x_jornada.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwro_empleado_x_Proyeccion_Gastos_Personales.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
