--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -288,6 +288,9 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Diario_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Cobros_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_detalle_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Bus.cs" />
