--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1163,6 +1163,9 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Cobros_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Diario_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_detalle_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Data.cs" />
