--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -317,6 +317,9 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Info.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Info.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Cobros_Info.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Diario_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_detalle_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Info.cs" />
