--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9767,6 +9767,7 @@
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_007.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionNovedades\_CmbSucursal.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoNovedad\_CmbSucursal.cshtml" />
+    <Content Include="Areas\RRHH\Views\Contrato\_CmbSucursal.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
